[gd_scene load_steps=4 format=4 uid="uid://5d0fekyxe626"]

[ext_resource type="Script" path="res://scripts/menu_opciones_real.gd" id="1_0dpir"]
[ext_resource type="TileSet" uid="uid://tr1qsvw38yju" path="res://tiles/tileset_paneles_mejoras.tres" id="2_dbv6a"]
[ext_resource type="FontFile" uid="uid://ba61w4ocvfhxb" path="res://fonts/ExpressionPro.otf" id="3_8d1sr"]

[node name="MenuOpciones" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0dpir")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -650.0
offset_top = -308.0
offset_right = 686.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.95)

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 33.0
offset_top = 5.0
offset_right = 73.0
offset_bottom = 45.0

[node name="TileMapLayer" type="TileMapLayer" parent="Control"]
position = Vector2(0, 64)
tile_map_data = PackedByteArray("AAD///v/AQAuAAIAAAD+//v/AQAuAAIAAAD9//v/AQAuAAIAAAD8//v/AQAuAAIAAAD7//v/AQAuAAIAAAD6//v/AQAuAAIAAAD5//v/AQAuAAIAAAD4//v/AQAuAAIAAAAHAPv/AQAuAAIAAAAGAPv/AQAuAAIAAAAFAPv/AQAuAAIAAAAEAPv/AQAuAAIAAAADAPv/AQAuAAIAAAACAPv/AQAuAAIAAAABAPv/AQAuAAIAAAAAAPv/AQAuAAIAAAD2//v/AQAuAAIAAAD3//v/AQAuAAIAAAD1//v/AQAuAAIAAAAJAPv/AQAuAAIAAAAIAPv/AQAuAAIAAAAKAPv/AQAuAAIAAAD0//v/AQAuAAIAAAD0//b/AQAuAAIAAAAKAPf/AQAuAAIAAAAKAPj/AQAuAAIAAAAKAPn/AQAuAAIAAAAKAPr/AQAuAAIAAAAKAPb/AQAuAAIAAAAIAPb/AQAuAAIAAAAJAPb/AQAuAAIAAAAHAPb/AQAuAAIAAAAGAPb/AQAuAAIAAAAFAPb/AQAuAAIAAAAEAPb/AQAuAAIAAAADAPb/AQAuAAIAAAACAPb/AQAuAAIAAAABAPb/AQAuAAIAAAAAAPb/AQAuAAIAAAD///b/AQAuAAIAAAD+//b/AQAuAAIAAAD9//b/AQAuAAIAAAD8//b/AQAuAAIAAAD7//b/AQAuAAIAAAD6//b/AQAuAAIAAAD5//b/AQAuAAIAAAD4//b/AQAuAAIAAAD3//b/AQAuAAIAAAD2//b/AQAuAAIAAAD1//b/AQAuAAIAAAD0//f/AQAuAAIAAAD0//j/AQAuAAIAAAD0//n/AQAuAAIAAAD0//r/AQAuAAIAAAD9//j/AQAuAAIAAAD9//f/AQAuAAIAAAD8//f/AQAuAAIAAAD7//f/AQAuAAIAAAD6//f/AQAuAAIAAAD5//f/AQAuAAIAAAD4//f/AQAuAAIAAAD3//f/AQAuAAIAAAD2//f/AQAuAAIAAAD1//f/AQAuAAIAAAD1//j/AQAuAAIAAAD1//n/AQAuAAIAAAD1//r/AQAuAAIAAAD2//r/AQAuAAIAAAD2//n/AQAuAAIAAAD2//j/AQAuAAIAAAD3//j/AQAuAAIAAAD3//n/AQAuAAIAAAD3//r/AQAuAAIAAAD4//r/AQAuAAIAAAD4//n/AQAuAAIAAAD4//j/AQAuAAIAAAD5//j/AQAuAAIAAAD5//n/AQAuAAIAAAD5//r/AQAuAAIAAAD6//r/AQAuAAIAAAD6//n/AQAuAAIAAAD6//j/AQAuAAIAAAD7//j/AQAuAAIAAAD7//n/AQAuAAIAAAD7//r/AQAuAAIAAAD8//r/AQAuAAIAAAD8//n/AQAuAAIAAAD8//j/AQAuAAIAAAD9//n/AQAuAAIAAAD9//r/AQAuAAIAAAD+//r/AQAuAAIAAAD+//n/AQAuAAIAAAD+//j/AQAuAAIAAAD+//f/AQAuAAIAAAD///f/AQAuAAIAAAD///j/AQAuAAIAAAD///n/AQAuAAIAAAD///r/AQAuAAIAAAAAAPr/AQAuAAIAAAAAAPn/AQAuAAIAAAAAAPj/AQAuAAIAAAAAAPf/AQAuAAIAAAABAPf/AQAuAAIAAAABAPj/AQAuAAIAAAABAPn/AQAuAAIAAAABAPr/AQAuAAIAAAACAPr/AQAuAAIAAAACAPn/AQAuAAIAAAACAPj/AQAuAAIAAAACAPf/AQAuAAIAAAADAPf/AQAuAAIAAAADAPj/AQAuAAIAAAADAPn/AQAuAAIAAAADAPr/AQAuAAIAAAAEAPr/AQAuAAIAAAAEAPn/AQAuAAIAAAAEAPj/AQAuAAIAAAAEAPf/AQAuAAIAAAAFAPf/AQAuAAIAAAAFAPj/AQAuAAIAAAAFAPn/AQAuAAIAAAAFAPr/AQAuAAIAAAAGAPr/AQAuAAIAAAAGAPn/AQAuAAIAAAAGAPj/AQAuAAIAAAAGAPf/AQAuAAIAAAAHAPf/AQAuAAIAAAAHAPj/AQAuAAIAAAAHAPn/AQAuAAIAAAAHAPr/AQAuAAIAAAAIAPr/AQAuAAIAAAAIAPn/AQAuAAIAAAAIAPj/AQAuAAIAAAAIAPf/AQAuAAIAAAAJAPf/AQAuAAIAAAAJAPj/AQAuAAIAAAAJAPn/AQAuAAIAAAAJAPr/AQAuAAIAAAALAPv/AQAuAAIAAAALAPf/AQAuAAIAAAALAPj/AQAuAAIAAAALAPn/AQAuAAIAAAALAPr/AQAuAAIAAAALAPb/AQAuAAIAAADz//b/AQAuAAIAAADy//b/AQAuAAIAAADx//b/AQAuAAIAAADw//b/AQAuAAIAAADv//b/AQAuAAIAAADu//b/AQAuAAIAAADt//b/AQAuAAIAAAAMAPb/AQAuAAIAAAANAPb/AQAuAAIAAAAOAPb/AQAuAAIAAAAPAPb/AQAuAAIAAAAQAPb/AQAuAAIAAAARAPb/AQAuAAIAAAASAPb/AQAuAAIAAAATAPb/AQAuAAIAAAAUAPb/AQAuAAIAAADr//b/AQAuAAIAAADs//b/AQAuAAIAAADq//b/AQAuAAIAAADp//T/AQAtAAEAAAAVAPT/AQAvAAEAAAD1//T/AQAuAAEAAAD0//T/AQAuAAEAAADz//T/AQAuAAEAAADy//T/AQAuAAEAAADx//T/AQAuAAEAAADw//T/AQAuAAEAAADv//T/AQAuAAEAAADu//T/AQAuAAEAAADt//T/AQAuAAEAAADs//T/AQAuAAEAAADr//T/AQAuAAEAAADq//T/AQAuAAEAAAD2//T/AQAuAAEAAAD3//T/AQAuAAEAAAD4//T/AQAuAAEAAAD5//T/AQAuAAEAAAD6//T/AQAuAAEAAAD7//T/AQAuAAEAAAD8//T/AQAuAAEAAAD9//T/AQAuAAEAAAD+//T/AQAuAAEAAAD///T/AQAuAAEAAAAAAPT/AQAuAAEAAAABAPT/AQAuAAEAAAACAPT/AQAuAAEAAAADAPT/AQAuAAEAAAAEAPT/AQAuAAEAAAAFAPT/AQAuAAEAAAAGAPT/AQAuAAEAAAAHAPT/AQAuAAEAAAAIAPT/AQAuAAEAAAAJAPT/AQAuAAEAAAAKAPT/AQAuAAEAAAALAPT/AQAuAAEAAAAMAPT/AQAuAAEAAAANAPT/AQAuAAEAAAAOAPT/AQAuAAEAAAAPAPT/AQAuAAEAAAAQAPT/AQAuAAEAAAARAPT/AQAuAAEAAAASAPT/AQAuAAEAAAATAPT/AQAuAAEAAAAUAPT/AQAuAAEAAADp//X/AQAtAAIAAADp//b/AQAtAAIAAADp//f/AQAtAAIAAADp//j/AQAtAAIAAADp//n/AQAtAAIAAADp//r/AQAtAAIAAADp//v/AQAtAAIAAADp//z/AQAtAAIAAADp//3/AQAtAAIAAADp//7/AQAtAAIAAADp////AQAtAAIAAADp/wAAAQAtAAIAAADp/wEAAQAtAAIAAADp/wIAAQAtAAIAAADp/wMAAQAtAAIAAADp/wQAAQAtAAIAAADp/wUAAQAtAAIAAADp/wYAAQAtAAIAAADp/wcAAQAtAAMAAADq/wcAAQAuAAMAAADr/wcAAQAuAAMAAADs/wcAAQAuAAMAAADt/wcAAQAuAAMAAADu/wcAAQAuAAMAAADv/wcAAQAuAAMAAADw/wcAAQAuAAMAAADx/wcAAQAuAAMAAADy/wcAAQAuAAMAAADz/wcAAQAuAAMAAAD0/wcAAQAuAAMAAAD1/wcAAQAuAAMAAAD2/wcAAQAuAAMAAAD3/wcAAQAuAAMAAAD4/wcAAQAuAAMAAAD5/wcAAQAuAAMAAAD6/wcAAQAuAAMAAAD7/wcAAQAuAAMAAAD8/wcAAQAuAAMAAAD9/wcAAQAuAAMAAAD+/wcAAQAuAAMAAAD//wcAAQAuAAMAAAAAAAcAAQAuAAMAAAABAAcAAQAuAAMAAAACAAcAAQAuAAMAAAADAAcAAQAuAAMAAAAEAAcAAQAuAAMAAAAFAAcAAQAuAAMAAAAGAAcAAQAuAAMAAAAHAAcAAQAuAAMAAAAIAAcAAQAuAAMAAAAJAAcAAQAuAAMAAAAKAAcAAQAuAAMAAAALAAcAAQAuAAMAAAAMAAcAAQAuAAMAAAANAAcAAQAuAAMAAAAOAAcAAQAuAAMAAAAPAAcAAQAuAAMAAAAQAAcAAQAuAAMAAAARAAcAAQAuAAMAAAASAAcAAQAuAAMAAAATAAcAAQAuAAMAAAAUAAcAAQAuAAMAAAAVAAcAAQAvAAMAAAAVAAUAAQAvAAIAAAAVAAYAAQAvAAIAAAAVAAQAAQAvAAIAAAAVAAMAAQAvAAIAAAAVAAIAAQAvAAIAAAAVAAEAAQAvAAIAAAAVAAAAAQAvAAIAAAAVAP//AQAvAAIAAAAVAP7/AQAvAAIAAAAVAP3/AQAvAAIAAAAVAPz/AQAvAAIAAAAVAPv/AQAvAAIAAAAVAPr/AQAvAAIAAAAVAPn/AQAvAAIAAAAVAPj/AQAvAAIAAAAVAPf/AQAvAAIAAAAVAPb/AQAvAAIAAAAVAPX/AQAvAAIAAADq//X/AQAuAAIAAADq//f/AQAuAAIAAADq//j/AQAuAAIAAADq//n/AQAuAAIAAADq//r/AQAuAAIAAADq//v/AQAuAAIAAADq//z/AQAuAAIAAADq//3/AQAuAAIAAADq//7/AQAuAAIAAADq////AQAuAAIAAADq/wAAAQAuAAIAAADq/wEAAQAuAAIAAADq/wIAAQAuAAIAAADq/wMAAQAuAAIAAADq/wQAAQAuAAIAAADq/wUAAQAuAAIAAADq/wYAAQAuAAIAAADr//X/AQAuAAIAAADr//f/AQAuAAIAAADr//j/AQAuAAIAAADr//n/AQAuAAIAAADr//r/AQAuAAIAAADr//v/AQAuAAIAAADr//z/AQAuAAIAAADr//3/AQAuAAIAAADr//7/AQAuAAIAAADr////AQAuAAIAAADr/wAAAQAuAAIAAADr/wEAAQAuAAIAAADr/wIAAQAuAAIAAADr/wMAAQAuAAIAAADr/wQAAQAuAAIAAADr/wUAAQAuAAIAAADr/wYAAQAuAAIAAADs//X/AQAuAAIAAADs//f/AQAuAAIAAADs//j/AQAuAAIAAADs//n/AQAuAAIAAADs//r/AQAuAAIAAADs//v/AQAuAAIAAADs//z/AQAuAAIAAADs//3/AQAuAAIAAADs//7/AQAuAAIAAADs////AQAuAAIAAADs/wAAAQAuAAIAAADs/wEAAQAuAAIAAADs/wIAAQAuAAIAAADs/wMAAQAuAAIAAADs/wQAAQAuAAIAAADs/wUAAQAuAAIAAADs/wYAAQAuAAIAAADt//X/AQAuAAIAAADt//f/AQAuAAIAAADt//j/AQAuAAIAAADt//n/AQAuAAIAAADt//r/AQAuAAIAAADt//v/AQAuAAIAAADt//z/AQAuAAIAAADt//3/AQAuAAIAAADt//7/AQAuAAIAAADt////AQAuAAIAAADt/wAAAQAuAAIAAADt/wEAAQAuAAIAAADt/wIAAQAuAAIAAADt/wMAAQAuAAIAAADt/wQAAQAuAAIAAADt/wUAAQAuAAIAAADt/wYAAQAuAAIAAADu//X/AQAuAAIAAADu//f/AQAuAAIAAADu//j/AQAuAAIAAADu//n/AQAuAAIAAADu//r/AQAuAAIAAADu//v/AQAuAAIAAADu//z/AQAuAAIAAADu//3/AQAuAAIAAADu//7/AQAuAAIAAADu////AQAuAAIAAADu/wAAAQAuAAIAAADu/wEAAQAuAAIAAADu/wIAAQAuAAIAAADu/wMAAQAuAAIAAADu/wQAAQAuAAIAAADu/wUAAQAuAAIAAADu/wYAAQAuAAIAAADv//X/AQAuAAIAAADv//f/AQAuAAIAAADv//j/AQAuAAIAAADv//n/AQAuAAIAAADv//r/AQAuAAIAAADv//v/AQAuAAIAAADv//z/AQAuAAIAAADv//3/AQAuAAIAAADv//7/AQAuAAIAAADv////AQAuAAIAAADv/wAAAQAuAAIAAADv/wEAAQAuAAIAAADv/wIAAQAuAAIAAADv/wMAAQAuAAIAAADv/wQAAQAuAAIAAADv/wUAAQAuAAIAAADv/wYAAQAuAAIAAADw//X/AQAuAAIAAADw//f/AQAuAAIAAADw//j/AQAuAAIAAADw//n/AQAuAAIAAADw//r/AQAuAAIAAADw//v/AQAuAAIAAADw//z/AQAuAAIAAADw//3/AQAuAAIAAADw//7/AQAuAAIAAADw////AQAuAAIAAADw/wAAAQAuAAIAAADw/wEAAQAuAAIAAADw/wIAAQAuAAIAAADw/wMAAQAuAAIAAADw/wQAAQAuAAIAAADw/wUAAQAuAAIAAADw/wYAAQAuAAIAAADx//X/AQAuAAIAAADx//f/AQAuAAIAAADx//j/AQAuAAIAAADx//n/AQAuAAIAAADx//r/AQAuAAIAAADx//v/AQAuAAIAAADx//z/AQAuAAIAAADx//3/AQAuAAIAAADx//7/AQAuAAIAAADx////AQAuAAIAAADx/wAAAQAuAAIAAADx/wEAAQAuAAIAAADx/wIAAQAuAAIAAADx/wMAAQAuAAIAAADx/wQAAQAuAAIAAADx/wUAAQAuAAIAAADx/wYAAQAuAAIAAADy//X/AQAuAAIAAADy//f/AQAuAAIAAADy//j/AQAuAAIAAADy//n/AQAuAAIAAADy//r/AQAuAAIAAADy//v/AQAuAAIAAADy//z/AQAuAAIAAADy//3/AQAuAAIAAADy//7/AQAuAAIAAADy////AQAuAAIAAADy/wAAAQAuAAIAAADy/wEAAQAuAAIAAADy/wIAAQAuAAIAAADy/wMAAQAuAAIAAADy/wQAAQAuAAIAAADy/wUAAQAuAAIAAADy/wYAAQAuAAIAAADz//X/AQAuAAIAAADz//f/AQAuAAIAAADz//j/AQAuAAIAAADz//n/AQAuAAIAAADz//r/AQAuAAIAAADz//v/AQAuAAIAAADz//z/AQAuAAIAAADz//3/AQAuAAIAAADz//7/AQAuAAIAAADz////AQAuAAIAAADz/wAAAQAuAAIAAADz/wEAAQAuAAIAAADz/wIAAQAuAAIAAADz/wMAAQAuAAIAAADz/wQAAQAuAAIAAADz/wUAAQAuAAIAAADz/wYAAQAuAAIAAAD0//X/AQAuAAIAAAD0//z/AQAuAAIAAAD0//3/AQAuAAIAAAD0//7/AQAuAAIAAAD0////AQAuAAIAAAD0/wAAAQAuAAIAAAD0/wEAAQAuAAIAAAD0/wIAAQAuAAIAAAD0/wMAAQAuAAIAAAD0/wQAAQAuAAIAAAD0/wUAAQAuAAIAAAD0/wYAAQAuAAIAAAD1//X/AQAuAAIAAAD1//z/AQAuAAIAAAD1//3/AQAuAAIAAAD1//7/AQAuAAIAAAD1////AQAuAAIAAAD1/wAAAQAuAAIAAAD1/wEAAQAuAAIAAAD1/wIAAQAuAAIAAAD1/wMAAQAuAAIAAAD1/wQAAQAuAAIAAAD1/wUAAQAuAAIAAAD1/wYAAQAuAAIAAAD2//X/AQAuAAIAAAD2//z/AQAuAAIAAAD2//3/AQAuAAIAAAD2//7/AQAuAAIAAAD2////AQAuAAIAAAD2/wAAAQAuAAIAAAD2/wEAAQAuAAIAAAD2/wIAAQAuAAIAAAD2/wMAAQAuAAIAAAD2/wQAAQAuAAIAAAD2/wUAAQAuAAIAAAD2/wYAAQAuAAIAAAD3//X/AQAuAAIAAAD3//z/AQAuAAIAAAD3//3/AQAuAAIAAAD3//7/AQAuAAIAAAD3////AQAuAAIAAAD3/wAAAQAuAAIAAAD3/wEAAQAuAAIAAAD3/wIAAQAuAAIAAAD3/wMAAQAuAAIAAAD3/wQAAQAuAAIAAAD3/wUAAQAuAAIAAAD3/wYAAQAuAAIAAAD4//X/AQAuAAIAAAD4//z/AQAuAAIAAAD4//3/AQAuAAIAAAD4//7/AQAuAAIAAAD4////AQAuAAIAAAD4/wAAAQAuAAIAAAD4/wEAAQAuAAIAAAD4/wIAAQAuAAIAAAD4/wMAAQAuAAIAAAD4/wQAAQAuAAIAAAD4/wUAAQAuAAIAAAD4/wYAAQAuAAIAAAD5//X/AQAuAAIAAAD5//z/AQAuAAIAAAD5//3/AQAuAAIAAAD5//7/AQAuAAIAAAD5////AQAuAAIAAAD5/wAAAQAuAAIAAAD5/wEAAQAuAAIAAAD5/wIAAQAuAAIAAAD5/wMAAQAuAAIAAAD5/wQAAQAuAAIAAAD5/wUAAQAuAAIAAAD5/wYAAQAuAAIAAAD6//X/AQAuAAIAAAD6//z/AQAuAAIAAAD6//3/AQAuAAIAAAD6//7/AQAuAAIAAAD6////AQAuAAIAAAD6/wAAAQAuAAIAAAD6/wEAAQAuAAIAAAD6/wIAAQAuAAIAAAD6/wMAAQAuAAIAAAD6/wQAAQAuAAIAAAD6/wUAAQAuAAIAAAD6/wYAAQAuAAIAAAD7//X/AQAuAAIAAAD7//z/AQAuAAIAAAD7//3/AQAuAAIAAAD7//7/AQAuAAIAAAD7////AQAuAAIAAAD7/wAAAQAuAAIAAAD7/wEAAQAuAAIAAAD7/wIAAQAuAAIAAAD7/wMAAQAuAAIAAAD7/wQAAQAuAAIAAAD7/wUAAQAuAAIAAAD7/wYAAQAuAAIAAAD8//X/AQAuAAIAAAD8//z/AQAuAAIAAAD8//3/AQAuAAIAAAD8//7/AQAuAAIAAAD8////AQAuAAIAAAD8/wAAAQAuAAIAAAD8/wEAAQAuAAIAAAD8/wIAAQAuAAIAAAD8/wMAAQAuAAIAAAD8/wQAAQAuAAIAAAD8/wUAAQAuAAIAAAD8/wYAAQAuAAIAAAD9//X/AQAuAAIAAAD9//z/AQAuAAIAAAD9//3/AQAuAAIAAAD9//7/AQAuAAIAAAD9////AQAuAAIAAAD9/wAAAQAuAAIAAAD9/wEAAQAuAAIAAAD9/wIAAQAuAAIAAAD9/wMAAQAuAAIAAAD9/wQAAQAuAAIAAAD9/wUAAQAuAAIAAAD9/wYAAQAuAAIAAAD+//X/AQAuAAIAAAD+//z/AQAuAAIAAAD+//3/AQAuAAIAAAD+//7/AQAuAAIAAAD+////AQAuAAIAAAD+/wAAAQAuAAIAAAD+/wEAAQAuAAIAAAD+/wIAAQAuAAIAAAD+/wMAAQAuAAIAAAD+/wQAAQAuAAIAAAD+/wUAAQAuAAIAAAD+/wYAAQAuAAIAAAD///X/AQAuAAIAAAD///z/AQAuAAIAAAD///3/AQAuAAIAAAD///7/AQAuAAIAAAD/////AQAuAAIAAAD//wAAAQAuAAIAAAD//wEAAQAuAAIAAAD//wIAAQAuAAIAAAD//wMAAQAuAAIAAAD//wQAAQAuAAIAAAD//wUAAQAuAAIAAAD//wYAAQAuAAIAAAAAAPX/AQAuAAIAAAAAAPz/AQAuAAIAAAAAAP3/AQAuAAIAAAAAAP7/AQAuAAIAAAAAAP//AQAuAAIAAAAAAAAAAQAuAAIAAAAAAAEAAQAuAAIAAAAAAAIAAQAuAAIAAAAAAAMAAQAuAAIAAAAAAAQAAQAuAAIAAAAAAAUAAQAuAAIAAAAAAAYAAQAuAAIAAAABAPX/AQAuAAIAAAABAPz/AQAuAAIAAAABAP3/AQAuAAIAAAABAP7/AQAuAAIAAAABAP//AQAuAAIAAAABAAAAAQAuAAIAAAABAAEAAQAuAAIAAAABAAIAAQAuAAIAAAABAAMAAQAuAAIAAAABAAQAAQAuAAIAAAABAAUAAQAuAAIAAAABAAYAAQAuAAIAAAACAPX/AQAuAAIAAAACAPz/AQAuAAIAAAACAP3/AQAuAAIAAAACAP7/AQAuAAIAAAACAP//AQAuAAIAAAACAAAAAQAuAAIAAAACAAEAAQAuAAIAAAACAAIAAQAuAAIAAAACAAMAAQAuAAIAAAACAAQAAQAuAAIAAAACAAUAAQAuAAIAAAACAAYAAQAuAAIAAAADAPX/AQAuAAIAAAADAPz/AQAuAAIAAAADAP3/AQAuAAIAAAADAP7/AQAuAAIAAAADAP//AQAuAAIAAAADAAAAAQAuAAIAAAADAAEAAQAuAAIAAAADAAIAAQAuAAIAAAADAAMAAQAuAAIAAAADAAQAAQAuAAIAAAADAAUAAQAuAAIAAAADAAYAAQAuAAIAAAAEAPX/AQAuAAIAAAAEAPz/AQAuAAIAAAAEAP3/AQAuAAIAAAAEAP7/AQAuAAIAAAAEAP//AQAuAAIAAAAEAAAAAQAuAAIAAAAEAAEAAQAuAAIAAAAEAAIAAQAuAAIAAAAEAAMAAQAuAAIAAAAEAAQAAQAuAAIAAAAEAAUAAQAuAAIAAAAEAAYAAQAuAAIAAAAFAPX/AQAuAAIAAAAFAPz/AQAuAAIAAAAFAP3/AQAuAAIAAAAFAP7/AQAuAAIAAAAFAP//AQAuAAIAAAAFAAAAAQAuAAIAAAAFAAEAAQAuAAIAAAAFAAIAAQAuAAIAAAAFAAMAAQAuAAIAAAAFAAQAAQAuAAIAAAAFAAUAAQAuAAIAAAAFAAYAAQAuAAIAAAAGAPX/AQAuAAIAAAAGAPz/AQAuAAIAAAAGAP3/AQAuAAIAAAAGAP7/AQAuAAIAAAAGAP//AQAuAAIAAAAGAAAAAQAuAAIAAAAGAAEAAQAuAAIAAAAGAAIAAQAuAAIAAAAGAAMAAQAuAAIAAAAGAAQAAQAuAAIAAAAGAAUAAQAuAAIAAAAGAAYAAQAuAAIAAAAHAPX/AQAuAAIAAAAHAPz/AQAuAAIAAAAHAP3/AQAuAAIAAAAHAP7/AQAuAAIAAAAHAP//AQAuAAIAAAAHAAAAAQAuAAIAAAAHAAEAAQAuAAIAAAAHAAIAAQAuAAIAAAAHAAMAAQAuAAIAAAAHAAQAAQAuAAIAAAAHAAUAAQAuAAIAAAAHAAYAAQAuAAIAAAAIAPX/AQAuAAIAAAAIAPz/AQAuAAIAAAAIAP3/AQAuAAIAAAAIAP7/AQAuAAIAAAAIAP//AQAuAAIAAAAIAAAAAQAuAAIAAAAIAAEAAQAuAAIAAAAIAAIAAQAuAAIAAAAIAAMAAQAuAAIAAAAIAAQAAQAuAAIAAAAIAAUAAQAuAAIAAAAIAAYAAQAuAAIAAAAJAPX/AQAuAAIAAAAJAPz/AQAuAAIAAAAJAP3/AQAuAAIAAAAJAP7/AQAuAAIAAAAJAP//AQAuAAIAAAAJAAAAAQAuAAIAAAAJAAEAAQAuAAIAAAAJAAIAAQAuAAIAAAAJAAMAAQAuAAIAAAAJAAQAAQAuAAIAAAAJAAUAAQAuAAIAAAAJAAYAAQAuAAIAAAAKAPX/AQAuAAIAAAAKAPz/AQAuAAIAAAAKAP3/AQAuAAIAAAAKAP7/AQAuAAIAAAAKAP//AQAuAAIAAAAKAAAAAQAuAAIAAAAKAAEAAQAuAAIAAAAKAAIAAQAuAAIAAAAKAAMAAQAuAAIAAAAKAAQAAQAuAAIAAAAKAAUAAQAuAAIAAAAKAAYAAQAuAAIAAAALAPX/AQAuAAIAAAALAPz/AQAuAAIAAAALAP3/AQAuAAIAAAALAP7/AQAuAAIAAAALAP//AQAuAAIAAAALAAAAAQAuAAIAAAALAAEAAQAuAAIAAAALAAIAAQAuAAIAAAALAAMAAQAuAAIAAAALAAQAAQAuAAIAAAALAAUAAQAuAAIAAAALAAYAAQAuAAIAAAAMAPX/AQAuAAIAAAAMAPf/AQAuAAIAAAAMAPj/AQAuAAIAAAAMAPn/AQAuAAIAAAAMAPr/AQAuAAIAAAAMAPv/AQAuAAIAAAAMAPz/AQAuAAIAAAAMAP3/AQAuAAIAAAAMAP7/AQAuAAIAAAAMAP//AQAuAAIAAAAMAAAAAQAuAAIAAAAMAAEAAQAuAAIAAAAMAAIAAQAuAAIAAAAMAAMAAQAuAAIAAAAMAAQAAQAuAAIAAAAMAAUAAQAuAAIAAAAMAAYAAQAuAAIAAAANAPX/AQAuAAIAAAANAPf/AQAuAAIAAAANAPj/AQAuAAIAAAANAPn/AQAuAAIAAAANAPr/AQAuAAIAAAANAPv/AQAuAAIAAAANAPz/AQAuAAIAAAANAP3/AQAuAAIAAAANAP7/AQAuAAIAAAANAP//AQAuAAIAAAANAAAAAQAuAAIAAAANAAEAAQAuAAIAAAANAAIAAQAuAAIAAAANAAMAAQAuAAIAAAANAAQAAQAuAAIAAAANAAUAAQAuAAIAAAANAAYAAQAuAAIAAAAOAPX/AQAuAAIAAAAOAPf/AQAuAAIAAAAOAPj/AQAuAAIAAAAOAPn/AQAuAAIAAAAOAPr/AQAuAAIAAAAOAPv/AQAuAAIAAAAOAPz/AQAuAAIAAAAOAP3/AQAuAAIAAAAOAP7/AQAuAAIAAAAOAP//AQAuAAIAAAAOAAAAAQAuAAIAAAAOAAEAAQAuAAIAAAAOAAIAAQAuAAIAAAAOAAMAAQAuAAIAAAAOAAQAAQAuAAIAAAAOAAUAAQAuAAIAAAAOAAYAAQAuAAIAAAAPAPX/AQAuAAIAAAAPAPf/AQAuAAIAAAAPAPj/AQAuAAIAAAAPAPn/AQAuAAIAAAAPAPr/AQAuAAIAAAAPAPv/AQAuAAIAAAAPAPz/AQAuAAIAAAAPAP3/AQAuAAIAAAAPAP7/AQAuAAIAAAAPAP//AQAuAAIAAAAPAAAAAQAuAAIAAAAPAAEAAQAuAAIAAAAPAAIAAQAuAAIAAAAPAAMAAQAuAAIAAAAPAAQAAQAuAAIAAAAPAAUAAQAuAAIAAAAPAAYAAQAuAAIAAAAQAPX/AQAuAAIAAAAQAPf/AQAuAAIAAAAQAPj/AQAuAAIAAAAQAPn/AQAuAAIAAAAQAPr/AQAuAAIAAAAQAPv/AQAuAAIAAAAQAPz/AQAuAAIAAAAQAP3/AQAuAAIAAAAQAP7/AQAuAAIAAAAQAP//AQAuAAIAAAAQAAAAAQAuAAIAAAAQAAEAAQAuAAIAAAAQAAIAAQAuAAIAAAAQAAMAAQAuAAIAAAAQAAQAAQAuAAIAAAAQAAUAAQAuAAIAAAAQAAYAAQAuAAIAAAARAPX/AQAuAAIAAAARAPf/AQAuAAIAAAARAPj/AQAuAAIAAAARAPn/AQAuAAIAAAARAPr/AQAuAAIAAAARAPv/AQAuAAIAAAARAPz/AQAuAAIAAAARAP3/AQAuAAIAAAARAP7/AQAuAAIAAAARAP//AQAuAAIAAAARAAAAAQAuAAIAAAARAAEAAQAuAAIAAAARAAIAAQAuAAIAAAARAAMAAQAuAAIAAAARAAQAAQAuAAIAAAARAAUAAQAuAAIAAAARAAYAAQAuAAIAAAASAPX/AQAuAAIAAAASAPf/AQAuAAIAAAASAPj/AQAuAAIAAAASAPn/AQAuAAIAAAASAPr/AQAuAAIAAAASAPv/AQAuAAIAAAASAPz/AQAuAAIAAAASAP3/AQAuAAIAAAASAP7/AQAuAAIAAAASAP//AQAuAAIAAAASAAAAAQAuAAIAAAASAAEAAQAuAAIAAAASAAIAAQAuAAIAAAASAAMAAQAuAAIAAAASAAQAAQAuAAIAAAASAAUAAQAuAAIAAAASAAYAAQAuAAIAAAATAPX/AQAuAAIAAAATAPf/AQAuAAIAAAATAPj/AQAuAAIAAAATAPn/AQAuAAIAAAATAPr/AQAuAAIAAAATAPv/AQAuAAIAAAATAPz/AQAuAAIAAAATAP3/AQAuAAIAAAATAP7/AQAuAAIAAAATAP//AQAuAAIAAAATAAAAAQAuAAIAAAATAAEAAQAuAAIAAAATAAIAAQAuAAIAAAATAAMAAQAuAAIAAAATAAQAAQAuAAIAAAATAAUAAQAuAAIAAAATAAYAAQAuAAIAAAAUAPX/AQAuAAIAAAAUAPf/AQAuAAIAAAAUAPj/AQAuAAIAAAAUAPn/AQAuAAIAAAAUAPr/AQAuAAIAAAAUAPv/AQAuAAIAAAAUAPz/AQAuAAIAAAAUAP3/AQAuAAIAAAAUAP7/AQAuAAIAAAAUAP//AQAuAAIAAAAUAAAAAQAuAAIAAAAUAAEAAQAuAAIAAAAUAAIAAQAuAAIAAAAUAAMAAQAuAAIAAAAUAAQAAQAuAAIAAAAUAAUAAQAuAAIAAAAUAAYAAQAuAAIAAAA=")
tile_set = ExtResource("2_dbv6a")

[node name="Botones" type="TileMapLayer" parent="Control"]
position = Vector2(-33, -5)
tile_map_data = PackedByteArray("AAABAAkAAgAGAAMAAAAAAAkAAgAGAAMAAAACAAkAAgAHAAMAAAD//woAAgAFAAQAAAD//wkAAgAFAAMAAAD//wsAAgAFAAUAAAACAAsAAgAHAAUAAAABAAsAAgAGAAUAAAAAAAsAAgAGAAUAAAACAAoAAgAHAAQAAAABAAoAAgAGAAQAAAAAAAoAAgAGAAQAAAATAPn/AgAFAAMAAAATAPv/AgAFAAUAAAAWAPv/AgAHAAUAAAAWAPn/AgAHAAMAAAAVAPn/AgAGAAMAAAAUAPn/AgAGAAMAAAAVAPv/AgAGAAUAAAAUAPv/AgAGAAUAAAATAPr/AgAFAAQAAAAWAPr/AgAHAAQAAAAVAPr/AgAGAAQAAAAUAPr/AgAGAAQAAAA=")
tile_set = ExtResource("2_dbv6a")

[node name="Botones2" type="TileMapLayer" parent="Control"]
position = Vector2(-31, 3)
tile_map_data = PackedByteArray("AAAAAAkABAASAAAAAAAAAAoABAASAAEAAAABAAkABAATAAAAAAABAAoABAATAAEAAAA=")
tile_set = ExtResource("2_dbv6a")

[node name="Botones3" type="TileMapLayer" parent="Control"]
position = Vector2(-32, 0)
tile_map_data = PackedByteArray("AAAVAPn/BAAEAAAAABAUAPn/BAAFAAAAABAVAPr/BAAEAAEAABAUAPr/BAAFAAEAABA=")
tile_set = ExtResource("2_dbv6a")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -141.0
offset_top = -121.0
offset_right = 178.0
offset_bottom = -65.0
theme_override_fonts/font = ExtResource("3_8d1sr")
theme_override_font_sizes/font_size = 64
text = "OPCIONES"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = -194.0
offset_top = -15.0
offset_right = 232.0
offset_bottom = 1.0

[node name="LabelMusica" type="Label" parent="."]
layout_mode = 0
offset_left = -7.0
offset_top = 4.0
offset_right = 45.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("3_8d1sr")
theme_override_font_sizes/font_size = 32
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="LabelNumeroActual" type="Label" parent="."]
layout_mode = 0
offset_left = -193.0
offset_top = -68.0
offset_right = 230.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_8d1sr")
theme_override_font_sizes/font_size = 32
text = "Volumen de la musica"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BotonGuardar" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -15.0
offset_top = 145.0
offset_right = 48.0
offset_bottom = 189.0

[node name="BotonSalir" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 306.0
offset_top = -110.0
offset_right = 365.0
offset_bottom = -66.0

[connection signal="pressed" from="BotonSalir" to="." method="_on_boton_salir_pressed"]
